4/4/12 clean up visibility of interactive line
4/4/12 set rise/run feature off by default
4/4/12 generate graph-related icons programmatically, to facilitate changing colors
4/4/12 add slope manipulator after intercept, so that slope can be changed when x=0
4/4/12 group all line-related check boxes together
4/4/12 improve icons using workaround for #558 (image returned by PPath.toImage is clipped on right and bottom edges)
4/4/12 improved icon for rise/run check box
4/4/12 increase stroke width of rise/run divisor line
4/4/12 change color of point tool, it was clashing with interactive line color
4/4/12 put a translucent background behind values on rise/run brackets, so they are visible when on top of other things, color code to slope
4/4/12 use gray for saved lines, green for highlight on mouseOver
4/4/12 tweak font for equations shown on lines
4/4/12 tweak color scheme
4/4/12 used colorblind-friendly version of red for interactive line
4/4/12 change "Show" panel to "Graph", rename and simplify constructor
4/4/12 tweak brackets so they don't get lost behind manipulators, and they look nicer where they meet
4/4/12 make manipulators slightly larger
4/4/12 add separator for save/erase buttons
4/4/12 replace equation with "x = 0" when slope is undefined
4/4/12 put "Erase Lines" button next to "Save Line" button
4/4/12 don't disable any controls when "Lines" is unchecked (for discussion)
4/4/12 add horizontal separators for titles in control panels
4/3/12 move formatting of equation in reduced form from model to view
4/3/12 constrain drag range of line manipulators to match equation constraints
4/3/12 use nearest-neighbor rounding instead of truncation when computing reduced form of equation
4/3/12 rename spinner button images
4/3/12 tweak font sizes
4/3/12 delete JSpinner-based equation implementation [63011]
4/3/12 color code the spinner buttons to match the line manipulators
4/3/12 replace JSpinners with SpinnerButtonNode from fractions project